# LIS3MDLTR-Driver

./: CMakeLists.txt  Doxyfile  DoxygenMainPage.dox  README.md  project.yml
Doxygen Output/html/: _l_i_s3_m_d_l_t_r_8c_source.html  _l_i_s3_m_d_l_t_r_8h_source.html  annotated.html  annotated_dup.js  classes.html  dir_1feda6df789d47336e6e5f2d2d4e113c.html  dir_1feda6df789d47336e6e5f2d2d4e113c.js  dir_52c912f73dac9c4c0e442232e1b2bd80.html  dir_52c912f73dac9c4c0e442232e1b2bd80.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_c5a52a81292cf9a5167198f4f346d6d9.html  dir_c5a52a81292cf9a5167198f4f346d6d9.js  dir_d0dbfc5afe52f9e9278ab3044cf3a498.html  dir_d0dbfc5afe52f9e9278ab3044cf3a498.js  dir_d6ecaa01a0d1ce6c1f26f84893654be6.html  dir_d6ecaa01a0d1ce6c1f26f84893654be6.js  dir_f0d44b233edd7489468a4fd69abd1da2.html  dir_f0d44b233edd7489468a4fd69abd1da2.js  files.html  files_dup.js  graph_legend.html  group___l_i_s3_m_d_l_t_r.html  group___l_i_s3_m_d_l_t_r.js  i2c_8c_source.html  i2c_8h_source.html  index.html  main_8c_source.html  modules.html  modules.js  navtreedata.js  navtreeindex0.js  struct_l_i_s3_m_d_l_t_r-members.html  struct_l_i_s3_m_d_l_t_r.html  struct_l_i_s3_m_d_l_t_r.js
Doxygen Output/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  (+14 more)
Doxygen Output/latex/: annotated.tex  group___l_i_s3_m_d_l_t_r.tex  index.tex  modules.tex  refman.tex  struct_l_i_s3_m_d_l_t_r.tex
hal/: CMakeLists.txt
hal/src/: i2c.c
platform/: CMakeLists.txt
platform/inc/: LIS3MDLTR.h
platform/src/: LIS3MDLTR.c
src/: LIS3MDLTR.c  LIS3MDLTR.h  i2c.h  main.c
test/: test_LIS3MDLTR.c
